# python-hse

./: .coderabbit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
projects/common/: README.md  __init__.py  pyproject.toml
projects/common/common/: __init__.py
projects/common/common/clients/: __init__.py  open_food_client.py  open_weather_client.py  usda_food_client.py
projects/telegram_bot/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/telegram_bot/src/: bot.py  config.py  middlewares.py
projects/telegram_bot/src/core/: __init__.py  calorie.py
projects/telegram_bot/src/core/validation/: __init__.py  log_intake.py  profile.py
projects/telegram_bot/src/routes/: __init__.py  log_intake.py  profile.py  progress.py
projects/telegram_bot/src/states/: __init__.py  log_intake.py  profile.py
projects/telegram_bot/src/texts/: __init__.py  general.py  log_intake.py  profile.py  progress.py
