[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Second homework: telegram bot for calories tracking"
authors = ["Nikita Zolin <mrdelrus@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pydantic-settings = "^2.12.0"
pydantic = "^2.12.5"
aiogram = "^3.24.0"
aiohttp = "^3.13.3"
common = {path = "../common"}


[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"
pyowm = "^3.5.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
